common-applications/control/cla-migration/website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: cla-frontend
  name: cla-frontend
  namespace: cla-migration
spec:
  replicas: 2
  selector:
    matchLabels:
      component: cla-frontend
  template:
    metadata:
      labels:
        component: cla-frontend
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/cla-webui:0a1d30fe9ce79bba84f50d8c88f29d61b8748335
        imagePullPolicy: IfNotPresent
        name: cla-frontend-pod
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
