common-applications/control/cla-migration/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: claservice
  namespace: cla-migration
spec:
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    component: cla-frontend
  type: ClusterIP
