common-applications/control/cla-migration/website/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "400"
    nginx.ingress.kubernetes.io/limit-rps: "400"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src https://clasign.osinfra.cn";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      add_header X-Content-Type-Options "nosniff";
  name: cla-ingress
  namespace: cla-migration
spec:
  tls:
    - hosts:
        - clasign.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: clasign.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: claservice
              servicePort: 80
            path: /
